--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Daniel Neshyba-Rowe <rowedanielp@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.9, < 4.0"
 fastapi = "^0.95.1"
 uvicorn = "^0.22.0"
 alembic = "^1.10.4"
